--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
+    "roslib": "^1.0.1",
+    "rosnodejs": "^3.0.2",
+    "stylus": "^0.54.7",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuetify": "^2.2.11",
+    "vuetify-snackbar-queue": "0.0.3",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
@@ -34,6 +38,7 @@
     "prettier": "^1.19.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.2",
+    "stylus-loader": "^3.0.2",
     "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
