--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
-    "roslib": "^1.0.1",
+    "epic-spinners": "^1.1.0",
+    "roslib": "^1.1.0",
     "rosnodejs": "^3.0.2",
     "stylus": "^0.54.7",
     "vue": "^2.6.11",
-    "vue-router": "^3.1.5",
-    "vuetify": "^2.2.11",
+    "vue-notification": "^1.3.20",
+    "vue-router": "^3.1.6",
+    "vue2-perfect-scrollbar": "^1.3.0",
+    "vuelidate": "^0.7.5",
+    "vuetify": "^2.2.17",
     "vuetify-snackbar-queue": "0.0.3",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
@@ -32,11 +36,11 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^6.1.2",
+    "eslint-plugin-vue": "^6.2.2",
     "material-design-icons-iconfont": "^5.0.1",
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
-    "sass": "^1.19.0",
+    "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "stylus-loader": "^3.0.2",
     "vue-cli-plugin-vuetify": "~2.0.5",
