--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "epic-spinners": "^1.1.0",
+    "google-fonts-webpack-plugin": "^0.4.4",
     "roslib": "^1.1.0",
     "rosnodejs": "^3.0.2",
     "stylus": "^0.54.7",
@@ -22,7 +23,8 @@
     "vuelidate": "^0.7.5",
     "vuetify": "^2.2.17",
     "vuetify-snackbar-queue": "0.0.3",
-    "vuex": "^3.1.3"
+    "vuex": "^3.1.3",
+    "vuex-persist": "^2.2.0"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.12.1",
