--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "rosnodejs": "^3.0.2",
     "stylus": "^0.54.7",
     "vue": "^2.6.11",
+    "vue-analytics": "^5.22.1",
     "vue-notification": "^1.3.20",
     "vue-router": "^3.1.6",
     "vue2-perfect-scrollbar": "^1.3.0",
